--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@klebba/element-server",
   "author": "Casey Klebba",
   "description": "Serves your element.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "repository": "klebba/element-server",
   "main": "index.js",
@@ -19,9 +19,7 @@
     "/bin"
   ],
   "dependencies": {
-    "koa": "^2.3.0",
-    "koa-mount": "^3.0.0",
-    "koa-static": "^4.0.1"
+    "node-static": "^0.7.10"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
