--- a/package.json
+++ b/package.json
@@ -14,15 +14,12 @@
   "bin": {
     "element-server": "bin/server.js"
   },
-  "files": [
-    "/index.js",
-    "/bin"
-  ],
+  "files": ["/index.js", "/bin"],
   "dependencies": {
     "node-static": "^0.7.10"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-klebba": "^1.0.2"
+    "eslint": "^4.13.1",
+    "eslint-config-klebba": "^1.0.3"
   }
 }
