--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@klebba/element-server",
   "author": "Casey Klebba",
   "description": "Serves your element.",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "license": "MIT",
   "repository": "klebba/element-server",
   "main": "index.js",
@@ -14,7 +14,10 @@
   "bin": {
     "element-server": "bin/server.js"
   },
-  "files": ["/index.js", "/bin"],
+  "files": [
+    "/index.js",
+    "/bin"
+  ],
   "dependencies": {
     "node-static": "^0.7.10"
   },
